--- a/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/wmsindex.xhtml
@@ -20,23 +20,23 @@
         </ui:define>
 
         <ui:define name="left">
-                <p:panelMenu>
-                    <p:submenu label =" Manage Your Warehouse">
-                        <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
-                        <p:submenu label="Warehouse" >
-                            <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
-                            <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
-                        </p:submenu>
-                        <p:submenu label="Storage Type" >
-                            <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
-                            <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" />
-                        </p:submenu>
-                        <p:submenu label="Storage Bin" >
-                            <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
-                            <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
-                        </p:submenu>
+            <p:panelMenu>
+                <p:submenu label =" Manage Your Warehouse">
+                    <p:menuitem value="WMS Home" url="wmsindex.xhtml" style="background-color: lavender"/>
+                    <p:submenu label="Warehouse" >
+                        <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
+                        <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
                     </p:submenu>
-                </p:panelMenu>
+                    <p:submenu label="Warehouse Zone" >
+                        <p:menuitem value="Add Warehouse Zone" url="addwarehousezone.xhtml" />
+                        <p:menuitem value="View Warehouse Zones" url="viewwarehousezone.xhtml" />
+                    </p:submenu>
+                    <p:submenu label="Storage Bin" >
+                        <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
+                        <p:menuitem value="View Storage Bin" url="viewstoragebin.xhtml" />
+                    </p:submenu>
+                </p:submenu>
+            </p:panelMenu>
         </ui:define>
 
         <ui:define name="right">
