--- a/MerlionPortal/MerlionPortal-war/web/wms/viewwarehousezone.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/wms/viewwarehousezone.xhtml
@@ -28,9 +28,9 @@
                         <p:menuitem value="Add A Warehouse" url="addnewwarehouse.xhtml" />
                         <p:menuitem value="View All Warehouses" url="viewallwarehouse.xhtml" />
                     </p:submenu>
-                    <p:submenu label="Storage Type" >
-                        <p:menuitem value="Add Storage Type" url="addstoragetype.xhtml" />
-                        <p:menuitem value="View Storage Types" url="viewstoragetype.xhtml" style="background-color: lavender"/>
+                    <p:submenu label="Warehouse Zone" >
+                        <p:menuitem value="Add Warehouse Zone" url="addwarehousezone.xhtml" />
+                        <p:menuitem value="View Warehouse Zones" url="viewwarehousezone.xhtml" />
                     </p:submenu>
                     <p:submenu label="Storage Bin" >
                         <p:menuitem value="Add Storage Bin" url="addstoragebin.xhtml" />
@@ -44,7 +44,7 @@
         <ui:define name="right">
             <h:form id="formMain">
 
-                <p:panel id="panel" header=" View Storage Type for A Warehouse">
+                <p:panel id="panel" header=" View Warehouse Zones in a Warehouse">
                     <p:ajaxStatus style="width:16px;height:16px;">
                         <f:facet name="start">
                             <h:graphicImage value="/img/load.gif" />
@@ -62,7 +62,7 @@
                                 <p:selectOneMenu id="warehouse" value="#{storageTypeViewEditManagedBean.warehouseId}"  style="width:300px" required="true" requiredMessage="Please select a warehouse">
                                     <p:ajax listener="#{storageTypeViewEditManagedBean.onWarehouseChange}" update="storagetypeData" />
                                     <f:selectItem itemLabel="Select Warehouse" itemValue="" noSelectionOption="true" />
-                                    <f:selectItems value="#{createStorageTypeMB.warehouses}" var="warehouse" itemLabel="ID:#{warehouse.warehouseId} Name:#{warehouse.name}"  itemValue="#{warehouse.warehouseId}"/>
+                                    <f:selectItems value="#{storageTypeViewEditManagedBean.warehouses}" var="warehouse" itemLabel="ID:#{warehouse.warehouseId} Name:#{warehouse.name}"  itemValue="#{warehouse.warehouseId}"/>
                                 </p:selectOneMenu>
                             </p:column>
                         </p:row>
@@ -70,12 +70,12 @@
 
                     <p:dataTable id="storagetypeData" var="storagetype" sortMode="multiple" editable="true" value="#{storageTypeViewEditManagedBean.storagetypes}" 
                                  widgetVar="storageTypesTable"
-                                 emptyMessage="No Storage Type found"
+                                 emptyMessage="No Warehouse Zone found"
                                  rowKey="#{storagetype.storageTypeId}">
 
                         <f:facet name="header">                    
                             <p:outputPanel>
-                                <h:outputText value="Search Storage Type fields:" />
+                                <h:outputText value="Search Warehouse Zone fields:" />
                                 <p:inputText id="globalFilter" onkeyup="PF('storageTypesTable').filter()" />
                             </p:outputPanel>
                         </f:facet>
@@ -87,14 +87,14 @@
                             <h:outputText value="#{storagetype.warehousewarehouseId.warehouseId}" />
                         </p:column>
 
-                        <p:column filterBy="#{storagetype.storageTypeId}" filterMatchMode="exact" headerText="Storage Type ID" >
+                        <p:column filterBy="#{storagetype.storageTypeId}" filterMatchMode="exact" headerText="Warehouse Zone ID" >
                             <h:outputText value="#{storagetype.storageTypeId}" />
                         </p:column>
 
-                        <p:column  filterBy="#{storagetype.name}" filterMatchMode="contains" headerText="Storage Type">
+                        <p:column  filterBy="#{storagetype.name}" filterMatchMode="contains" headerText="Warehouse Zone">
                             <p:cellEditor>
                                 <f:facet name="output"><h:outputText value="#{storagetype.name}" /></f:facet>
-                                <f:facet name="input"><p:inputText value="#{storagetype.name}" style="width:100%" label="Storage Type"/></f:facet>
+                                <f:facet name="input"><p:inputText value="#{storagetype.name}" style="width:100%" label="Warehouse Zone"/></f:facet>
                             </p:cellEditor>
                         </p:column>     
 
@@ -107,7 +107,7 @@
 
                         <p:column style="width:48px">
                             <p:commandButton action="#{storageTypeViewEditManagedBean.deleteStorageType(storagetype)}" update="storagetypeData" icon = "ui-icon-trash">
-                                <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this storage bin?" icon="ui-icon-alert" />
+                                <p:confirm header="Confirm Deletion" message="Are you sure that you want to delete this storage type?" icon="ui-icon-alert" />
                             </p:commandButton> 
                             <p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
                                 <p:commandButton value="Yes" type="button" styleClass="ui-confirmdialog-yes" icon="ui-icon-check" />
