Create RFQ- Manli

--- a/MerlionPortal/MerlionPortal-war/web/crms/createservice.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createservice.xhtml
@@ -13,7 +13,7 @@
     </c:if>
 
     <ui:composition template="${root}/templates/${import}">        
-        <ui:param name="pageName" value="CRMS home" />
+        <ui:param name="pageName" value="Create Service Catalog" />
 
         <ui:define name="more-imports">
             <ui:insert>
