--- a/MerlionPortal/MerlionPortal-war/web/crms/viewcompanyservices.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewcompanyservices.xhtml
@@ -14,7 +14,7 @@
     </c:if>
 
     <ui:composition template="${root}/templates/${import}">        
-        <ui:param name="pageName" value="MRP II home" />
+        <ui:param name="pageName" value="View Company Service Catalog" />
 
         <ui:define name="more-imports">
             <ui:insert>
