view service detail- Manli

--- a/MerlionPortal/MerlionPortal-war/web/crms/crmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/crmsindex.xhtml
@@ -32,7 +32,8 @@
                         <p:menuitem value="View All Services" url="viewcompanyservices.xhtml" />
                     </p:submenu>
                     <p:submenu label="Quotation" styleClass="display:block">
-                        <p:menuitem value="Coming Soon" url="#" />
+                        <p:menuitem value="View All Requests" url="viewallrequests.xhtml" />
+                        <p:menuitem value="View All Quotations" url="viewallquotations.xhtml" />
                     </p:submenu>
                 </p:panelMenu>
             </h:form>
