--- a/MerlionPortal/MerlionPortal-war/web/crms/createrequestforquotation.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/createrequestforquotation.xhtml
@@ -24,7 +24,7 @@
             <h:form id="formMain">
                 <p:panelMenu>
                     <p:submenu label="CRMS HOME" styleClass="display:block">
-                        <p:menuitem value="CRMS Home" url="crmsindex.xhtml"/>
+                        <p:menuitem value="CRMS Home" url="crmsindex.xhtml"/>     
                         <p:menuitem value="Service Yellow Pages" url="serviceyellowpages.xhtml"/>
                     </p:submenu>
                     <p:submenu label="Service Catalog Management" styleClass="display:block">
@@ -32,7 +32,8 @@
                         <p:menuitem value="View All Services" url="viewcompanyservices.xhtml" />
                     </p:submenu>
                     <p:submenu label="Quotation" styleClass="display:block">
-                        <p:menuitem value="Coming Soon" url="#" />
+                        <p:menuitem value="View All Requests" url="viewallrequests.xhtml" />
+                        <p:menuitem value="View All Quotations" url="viewallquotations.xhtml" />
                     </p:submenu>
                 </p:panelMenu>
             </h:form>
