--- a/MerlionPortal/MerlionPortal-war/web/crms/viewcompanyservices.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/viewcompanyservices.xhtml
@@ -30,10 +30,11 @@
                     </p:submenu>
                     <p:submenu label="Service Catalog Management" styleClass="display:block">
                         <p:menuitem value="Create New Service" url="createservice.xhtml" />
-                        <p:menuitem value="View All Services" url="viewallservices.xhtml" />
+                        <p:menuitem value="View All Services" url="viewcompanyservices.xhtml" />
                     </p:submenu>
                     <p:submenu label="Quotation" styleClass="display:block">
-                        <p:menuitem value="Coming Soon" url="#" />
+                        <p:menuitem value="View All Requests" url="viewallrequests.xhtml" />
+                        <p:menuitem value="View All Quotations" url="viewallquotations.xhtml" />
                     </p:submenu>
                 </p:panelMenu>
             </h:form>
