view all request- Manli

--- a/MerlionPortal/MerlionPortal-war/web/crms/crmsindex.xhtml
+++ b/MerlionPortal/MerlionPortal-war/web/crms/crmsindex.xhtml
@@ -13,7 +13,7 @@
     </c:if>
 
     <ui:composition template="${root}/templates/${import}">        
-        <ui:param name="pageName" value="MRP II home" />
+        <ui:param name="pageName" value="CRMS Home" />
 
         <ui:define name="more-imports">
             <ui:insert>
